First slider moving

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <meta charset='utf-8' />
   <title>Range JS - JavaScript library for the HTML5 slider element</title>
   <link rel='stylesheet' href='style.css'/>
-  <script src='main.js'></script>
 </head>
 <body>
 <h1>Range JS</h1>
 <section>JavaScript library for the HTML5 <br>&lt;input type='range'&gt; slider element</section>
-<p><input type='range' min='0' max='100' value='50' step='10' oninput='showValue()'><span id='value'></span></p>
-<p><input type='range' min='0' max='100' value='50' step='100'class='slider'></p>
-<p><input type='range' min='0' max='10000' value='50' step='1000'class='slider'></p>
+<p><div class="slider"><div class="thumb"><div class="inner-thumb"></div></div></div></p>
+<p><div class="slider"><div class="thumb"><div class="inner-thumb"></div></div></div></p>
+<p><div class="slider"><div class="thumb"><div class="inner-thumb"></div></div></div></p>
+
+<script src='main.js'></script>
 </body>
 </html>
 
