Add moving to other sliders

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <h1>Range JS</h1>
-<section>JavaScript library for the HTML5 <br>&lt;input type='range'&gt; slider element</section>
-<p><div class="slider"><div class="thumb"><div class="inner-thumb"></div></div></div></p>
-<p><div class="slider"><div class="thumb"><div class="inner-thumb"></div></div></div></p>
-<p><div class="slider"><div class="thumb"><div class="inner-thumb"></div></div></div></p>
+<section>JavaScript library instead the HTML5 <br>&lt;input type='range'&gt; slider element</section>
+<p><div class="range__slider"><div class="thumb"><div class="inner-thumb"></div></div></div></p>
+<p><div class="range__slider"><div class="thumb"><div class="inner-thumb"></div></div></div></p>
+<p><div class="range__slider"><div class="thumb"><div class="inner-thumb"></div></div></div></p>
 
 <script src='main.js'></script>
 </body>
